--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,30 @@
 Package: detoxdats
 Type: Package
-Title: What the Package Does (Title Case)
+Title: detoxdats: Purify and Cleanse Your Data with Zen!
 Version: 0.1.0
 Authors@R: c(
     person(
-      "Jane", "Doe",
-      email = "jane@example.com",
+      "Dewi", "Christina",
+      email = "chrisdewiress@gmail.com",
       role = c("aut", "cre")
     )
   )
-Description: More about what it does (maybe more than one line).
-    Continuation lines should be indented.
+Description: This package compiles functions for data cleaning that are commonly found in epidemiological data.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.3.3
+Depends: R (>= 4.5.1)
+URL: https://github.com/DAChristina/detoxdats
+Imports:
+    magrittr (>= 2.0.0),
+    tidyverse (>= 2.0.0),
+    dplyr,
+    rlang,
+    stringr
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    roxygen2 (>= 7.3.3)
 Config/testthat/edition: 3
+RoxygenNote: 7.3.3
+Roxygen: list(markdown = TRUE)
+
