--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ URL: https://github.com/DAChristina/detoxdats
 Imports:
     magrittr (>= 2.0.0),
     tidyverse (>= 2.0.0),
+    tibble,
     dplyr,
     rlang,
     stringr
